# nomad

./: CMakeLists.txt
lib/FastNoiseLite/: FastNoiseLite.h
lib/Spline/: spline.h
lib/tinyobjloader/: tiny_obj_loader.h
src/: ai_test_1.cpp  ai_test_1.h  main.cpp  render_test_1.cpp  render_test_1.h
src/ai/: action.cpp  action.h  agent.cpp  agent.h  belief.cpp  belief.h  state.cpp  state.h  world_view.cpp  world_view.h
src/genom/: g_buffer.cpp  g_buffer.h  g_camera.cpp  g_camera.h  g_descriptor.cpp  g_descriptor.h  g_device.cpp  g_device.h  g_frame_info.h  g_game_object.cpp  g_game_object.h  g_model.cpp  g_model.h  g_model_builder.cpp  g_pipeline.cpp  g_pipeline.h  g_renderer.cpp  g_renderer.h  g_swap_chain.cpp  g_swap_chain.h  g_texture.cpp  g_texture.h  g_vertex.cpp  g_vertex.h  g_window.cpp  g_window.h  simple_render_system.cpp  simple_render_system.h
src/genom/render_systems/: billboard_system.cpp  billboard_system.h  point_light_system.cpp  point_light_system.h  render_system.h  simple_render_system.cpp  simple_render_system.h  terrain_map_debug_system.cpp  terrain_map_debug_system.h
src/genom/shaders/: billboard.frag  billboard.vert  point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
src/input/: keyboard_controller.cpp  keyboard_controller.h  keyboard_movement_controller.cpp  keyboard_movement_controller.h  settings.cpp  settings.h
src/people/: action.cpp  action.h  agent.h  location.cpp  location.h  state.cpp  state.h  state_ids.h  state_math.h  subject.h  world_state.cpp  world_state.h
src/utils/: hashing.h
src/world/: chunk.cpp  chunk.h  chunk_type.cpp  chunk_type.h  desert_chunk_type.cpp  desert_chunk_type.h  plains_chunk_type.cpp  plains_chunk_type.h  terrain.cpp  terrain.h  terrain_map.cpp  terrain_map.h  terrain_map_3d.cpp  terrain_map_3d.h  tile.cpp  tile.h  world.cpp  world.h  world_constants.h
